--- a/style.css
+++ b/style.css
@@ -290,3 +290,32 @@ input:focus {
   color: black;
   background-color: tomato;
 }
+
+/* Dialog */
+.dialog {
+  height: 100vh;
+  height: 100dvh;
+  width: 100vw;
+  width: 100dvw;
+  border: none;
+  outline: none;
+  background-color: lightgrey;
+}
+
+.dialog-wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.dialog-container {
+  border-radius: 10px;
+  background-color: white;
+  width: 350px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
