--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+  box-sizing: border-box;
+  border-radius: 5px;
+}
+
 body {
   max-width: 500px;
   position: relative;
@@ -34,12 +39,6 @@ h5 {
   color: #595959;
 }
 
-span {
-  font-size: 0.75rem;
-  margin-bottom: 2px;
-  background-color: lightgreen;
-}
-
 .red {
   background-color: tomato;
 }
@@ -57,75 +56,123 @@ header {
 .main {
   display: flex;
   flex-direction: row;
-  gap: 5px;
+  justify-content: center;
   width: 100%;
 }
 
-.rider-list {
+.form-btn-container {
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.rider-list {
+  height: 83vh;
+  overflow-y: scroll;
+  margin: 5px;
 }
 
 .li-rider {
   display: flex;
   flex-direction: column;
   cursor: pointer;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #333399;
-  background-color: #d9d9f2;
+  border: 1px solid black;
   padding-left: 3px;
   padding-right: 3px;
-  margin: 2px;
+  margin-bottom: 3px;
+}
+
+.team-wrapper,
+.rider-name-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.rider-name-wrapper span {
+  margin-inline: 5px;
+  font-size: 0.8rem;
+}
+
+.rider-name-wrapper h4 {
+  margin-block: 3px;
 }
 
 .li-rider-selected {
-  width: 100%;
+  background-color: #ccccff;
+  margin-bottom: 5px;
   font-weight: bold;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  font-size: 0.9rem;
 }
 
 .selected-container {
-  order: -1;
-  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  order: 1;
+  width: 60%;
+  padding-left: 5px;
+}
+
+.selected-container button {
+  width: 150px;
+}
+
+#rider-count,
+#reserve-count {
+  font-style: italic;
+  margin-block: 5px;
 }
 
 .list-container {
-  order: 1;
-  max-width: 50%;
-  border-left: 1px;
-  border-left-style: solid;
-  padding-left: 2px;
+  order: -1;
+  width: 60%;
+  height: 100%;
+  border: 2px solid #333399;
+}
+
+.search-container {
+  border-bottom: 2px solid #333399;
+  border-radius: 0;
+  padding: 5px;
 }
 
 .search {
-  width: 90%;
-  margin-left: 2px;
+  width: 100%;
   margin-top: 10px;
   margin-bottom: 10px;
-  height: 25px;
+  height: 35px;
   font-size: 0.9rem;
   font-weight: bold;
-  border-color: #333399;
-  border-style: solid;
+  border: 2px solid #333399;
+  padding-left: 3px;
+}
+
+.winners-container {
+  width: 60%;
+  margin-left: 5px;
 }
 
 button,
-.submit-button {
+.form-button {
   display: inline-block;
-  padding: 15px 25px 15px 25px;
-  font-weight: 600;
-  background-color: #333399;
-  color: white;
   border-radius: 5px;
   text-align: center;
-  font-size: 0.8rem;
+  font-weight: 600;
   border-style: none;
   min-height: 40px;
+  min-width: 120px;
   cursor: pointer;
+  color: white;
+  background-color: #333399;
+}
+
+.submit-button {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  padding: 15px 25px 15px 25px;
+  font-weight: 600;
+  font-size: 0.9rem;
 }
 
 button:disabled {
@@ -136,6 +183,11 @@ button:disabled {
   padding: 5px 7px 5px 7px;
 }
 
+.center {
+  margin-left: 0;
+  margin-right: 0;
+}
+
 .button-green {
   background-color: lightgreen;
   color: black;
@@ -143,18 +195,18 @@ button:disabled {
 
 .button-red {
   background-color: tomato;
+  color: white;
 }
 
-.ul-container-one {
-  display: flex;
-  flex-direction: row;
-  min-height: 250px;
+.ul-container-one,
+.ul-container-two {
+  text-align: left;
+  width: 100%;
+  min-height: 30%;
 }
 
 .ul-container-two {
-  display: flex;
-  flex-direction: row;
-  min-height: 120px;
+  min-height: 20%;
 }
 
 #selected-riders,
@@ -164,7 +216,8 @@ button:disabled {
 
 .button-container {
   display: flex;
-  gap: 5%;
+  justify-content: space-between;
+  gap: 10px;
 }
 
 .margin-top {
@@ -179,14 +232,20 @@ button:disabled {
   text-decoration: underline;
 }
 
+.input-container {
+  margin-top: 30px;
+  margin-inline: 10px;
+}
+
 .input {
   width: 95%;
-  height: 25px;
-  margin-bottom: 5px;
+  height: 30px;
+  margin-bottom: 10px;
   font-weight: bold;
   font-size: 0.9rem;
   border-color: #333399;
   border-style: solid;
+  padding-inline: 5px;
 }
 
 input:focus {
@@ -195,42 +254,6 @@ input:focus {
 }
 
 /* Modal */
-
-.modal,
-.final-modal {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  text-align: center;
-  width: 300px;
-  padding: 1.3rem;
-  min-height: 250px;
-  position: absolute;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
-  text-align: center;
-  background-color: white;
-  border: 1px solid #ddd;
-  border-radius: 15px;
-  z-index: 2;
-}
-
-.overlay,
-.final-overlay {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(3px);
-  z-index: 1;
-}
 
 .flex-row {
   display: flex;
@@ -243,10 +266,6 @@ input:focus {
 }
 
 /* Truien */
-
-.winners-container {
-  min-width: 60%;
-}
 
 #winners-heading {
   margin-bottom: 2rem;
@@ -292,14 +311,18 @@ input:focus {
 }
 
 /* Dialog */
+
 .dialog {
+  max-width: unset;
+  max-height: unset;
   height: 100vh;
   height: 100dvh;
   width: 100vw;
   width: 100dvw;
   border: none;
   outline: none;
-  background-color: lightgrey;
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(3px);
 }
 
 .dialog-wrapper {
@@ -313,9 +336,15 @@ input:focus {
 .dialog-container {
   border-radius: 10px;
   background-color: white;
+  min-height: 250px;
   width: 350px;
   padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
+}
+
+.footer {
+  height: 5%;
 }
